--- a/src/assets/views/templates/login.tpl.html
+++ b/src/assets/views/templates/login.tpl.html
@@ -14,6 +14,7 @@
                     <label for="password">Password</label>
                     <input type="password" name="password" id="password" />
                 </div>
+                <div>{$message|escape:'html'}</div>
             </div>
             <input type="submit" value="Submit"/> 
         </form>
